Closed Bug 499971 Opened 16 years ago Closed 16 years ago

escaping-callee getter functions cannot be JS_REQUIRES_STACK!

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: benjamin, Assigned: benjamin)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

In bug 494235, http://hg.mozilla.org/tracemonkey/rev/c074f0f0ad2d added CalleeGetter and js_GetCallVar which are marked JS_REQUIRES_STACK but are passed around as native function pointers which must not require the stack. This fixes the situation with an explicit js_LeaveTrace.
Attachment #384644 - Flags: review?(jorendorff)
Assignee: general → benjamin
Attachment #384644 - Flags: review?(jorendorff) → review+
Comment on attachment 384644 [details] [diff] [review] CalleeGetter and js_GetCallVar must not be JS_REQUIRES_STACK, rev. 1 Brendan initially had reservations about this patch, and he was going to comment here. I'm convinced this is the right fix, but it seems only courteous to ping Brendan one more time.
Comment on attachment 384644 [details] [diff] [review] CalleeGetter and js_GetCallVar must not be JS_REQUIRES_STACK, rev. 1 I was wrong, hadn't had a look at the patch and was going on a bad assumption. It is perfect. Thanks, /be
Attachment #384644 - Flags: review+
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: