Bug 499971 - js_GetCallVar and several others which are used as JSNatives must not be JS_REQURIES_STACK, r=jorendorff